# intellij-aspect

./: .bazelrc  .editorconfig  .gitignore  .licenserc.yaml  BUILD  MODULE.bazel  MODULE.bazel.bcr  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
common/: artifact_location.bzl  common.bzl  copy.bzl  dependencies.bzl  ide_info.bzl  make_variables.bzl  platform.bzl  version.bzl
config/: config.bzl  config.tpl  extension.bzl
intellij/: aspect.bzl  provider.bzl  testing.bzl
modules/: cc_info.bzl  cc_toolchain_info.bzl  go_info.bzl  java_common_info.bzl  java_info.bzl  java_toolchain_info.bzl  jvm_info.bzl  kotlin_info.bzl  proto_info.bzl  protobuf_info.bzl  provider.bzl  py_info.bzl  python_info.bzl  rules_proto_info.bzl  scala_info.bzl  test_info.bzl  xcode_info.bzl
private/: extension.bzl
private/lib/: BUILD  bep.kt  config.kt  deploy.kt  loads.kt  path.kt  platform.kt  proto.kt  tee.kt  transformers.kt  zip.kt
private/lib/utils/: platform.kt  proto.kt  tee.kt
private/proto/: common.proto  ide_info.proto
private/repos/: BUILD  bazel_versions.bzl  bazelisk.bzl  bcr_archive.bzl  environment.bzl
private/rules/: aspect_lib.bzl  bazel_binary.bzl  local_registry.bzl  local_registry.py
sdk/: BUILD
sdk/lib/: BUILD  aspectchoice.kt  config.kt  deploy.kt  loads.kt  readtarget.kt  transformers.kt  utils.kt
sdk/proto/: ide_info.proto
testing/fixtures/: BUILD
testing/fixtures/cpp/: BUILD  defs.bzl
testing/fixtures/general/: BUILD
testing/fixtures/go/: BUILD
testing/fixtures/java/: BUILD
testing/fixtures/kotlin/: BUILD
testing/fixtures/proto/: BUILD
testing/fixtures/python/: BUILD
testing/fixtures/scala/: BUILD
testing/rules/: BUILD  bazel.bzl  config.bzl  defs.bzl  fixture.bzl  local.bzl  module_dep.bzl  project.bzl
testing/rules/cache/: builder.kt  builder.proto  cache.bzl
testing/rules/fixture/: BUILD  builder.kt  builder.proto  fixture.bzl  fixture.kt  fixture.proto
testing/rules/lib/: action.kt  (+5 more)
tools/deploy/: BUILD  main.kt
tools/differ/: BUILD  compare.kt  filters.kt  json.kt  main.kt  workspace.kt
tools/format/: BUILD.bazel
tools/kotlin/: BUILD
tools/lib/: BUILD  RunfilesRepo.java  exec.kt
(+102 files in other folders)
