module(name = "intellij_aspect_sdk")

bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.4",
        "com.google.code.gson:gson:2.10.1",
        "com.google.errorprone:error_prone_annotations:2.23.0",
        "com.google.guava:guava:33.0.0-jre",
        "com.fasterxml.jackson.core:jackson-databind:2.20.1",
        "org.jetbrains.kotlinx:kotlinx-cli-jvm:0.3.6",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2",
        "com.pinterest.ktlint:ktlint-cli:1.8.0",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "intellij_aspect",
        "protobuf",
    ],
)
use_repo(maven, "maven")

bazel_registry = use_extension("//private:extension.bzl", "bazel_registry")
bazel_registry.bazelisk(version = "1.25.0")
bazel_registry.bcr(
    commit = "b39c3ac444c83f5e13f6878d06d4724620088eb6",
    sha256 = "8ee37fdca410f4487583138d3ac366efa6380de2ed31d5ce4df0fa060d961285",
)
use_repo(bazel_registry, "bazelisk", "bcr_archive")
