load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "ktlint",
    main_class = "com.pinterest.ktlint.Main",
    runtime_deps = ["@maven//:com_pinterest_ktlint_ktlint_cli"],
)

format_multirun(
    name = "format",
    kotlin = ":ktlint",
    kotlin_check_args = ["--relative"],
    kotlin_fix_args = ["-F"],
    starlark = "@buildifier_prebuilt//:buildifier",
)
